kustomize/argocd/ingress-gcp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "mako-ingress-ip-global"
    networking.gke.io/managed-certificates: "mako-bank-argocd-ssl-cert"
    kubernetes.io/ingress.allow-http: "false"
    # ArgoCD specific annotations for GCP Load Balancer
    cloud.google.com/backend-config: '{"default": "argocd-backend-config"}'
spec:
  rules:
    - host: argocd.mako-bank.com  # Change from .local to real domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
